fix: always-present scrollbar
- Use overflow:auto instead of overflow:scroll

--- a/static/css/md.css
+++ b/static/css/md.css
@@ -30,10 +30,6 @@
     border: 1px solid var(--color-secondary);
 }
 
-.md, .highlight {
-    width: 100%;
-}
-
 .properties {
     color: var(--color-secondary);
     font-size: calc(0.8rem * var(--scale));
@@ -58,31 +54,29 @@ blockquote > p:first-child {
     padding: 0 0.25rem;
 }
 
-.highlight {
+div.highlight {
     overflow: hidden;
-    overflow-x: scroll;
+    overflow-x: auto;
     scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-bg);
     scrollbar-width: thin;
     margin: 1rem 0;
-    padding: 0.5rem;
     font-size: calc(0.8rem * var(--scale));
     color: var(--color-primary);
-    max-width: 100%;
 }
 
-pre {
-    width: auto;
+div.highlight > pre {
+    padding: 0.5rem;
 }
 
-.highlight::-webkit-scrollbar {
+div.highlight::-webkit-scrollbar {
     width: 1em;
 }
 
-.highlight::-webkit-scrollbar-track {
+div.highlight::-webkit-scrollbar-track {
     background: var(--scrollbar-bg);
 }
 
-.highlight::-webkit-scrollbar-thumb {
+div.highlight::-webkit-scrollbar-thumb {
     background-color: var(--scrollbar-thumb);
     border-radius: 6px;
     border: 3px solid var(--scrollbar-border);
